Solution for relative URIs in css files
Started with docs

--- a/Mvc3.Demo/Content/Site.css
+++ b/Mvc3.Demo/Content/Site.css
@@ -34,42 +34,17 @@ textarea
     min-height: 75px;
 }
 
-.editor-label 
+.header 
 {
-    margin: 1em 0 0 0;
+    border-bottom: dashed 1px gray;
+    padding-bottom: 10px;
 }
 
-.editor-field 
+.nuget
 {
-    margin:0.5em 0 0 0;
-}
-
-
-/* Styles for validation helpers
------------------------------------------------------------*/
-.field-validation-error
-{
-    color: #ff0000;
-}
-
-.field-validation-valid
-{
-    display: none;
-}
-
-.input-validation-error
-{
-    border: 1px solid #ff0000;
-    background-color: #ffeeee;
-}
-
-.validation-summary-errors
-{
-    font-weight: bold;
-    color: #ff0000;
-}
-
-.validation-summary-valid
-{
-    display: none;
+    background-color: Black;
+    border: solid 3px gray;
+    padding: 5px;
+    color: White;
+    font-size: 1.5em;
 }
