Added OutputCaching example

--- a/Mvc3.Demo/Views/Home/Index.cshtml
+++ b/Mvc3.Demo/Views/Home/Index.cshtml
@@ -3,35 +3,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Hello!</h2>
-<p>
-    Moth is a library for ASP.NET MVC that enables you to do all the 
-    <strong>total awesomeness</strong>
-    required to build &laquo;really fast websites&trade;&raquo;, just like
-    <a href="http://stevesouders.com/">Steve Souders</a> thaught you.
-</p>
-
-<h3>So where am I now?</h3>
-<p>
-    This is the demo solution for Moth, running ASP.NET MVC 3 with Razor syntax.
-    It offers a quick demo of all the awesome features that Moth offers.
-    For documentation, check the <a href="http://github.com/janjongboom/Moth">GitHub page</a>.
-</p>
-
-<h3>So what'd you offer?</h3>
+<h2>Demo's!</h2>
+<p>Here are some demo's that are usefull in combination with the docs on the wiki page.</p>
 <ul>
-    <li>Let your server cool off with the best caching framework available</li>
-    <li>Minimize requests by combining javascript and CSS files</li>
-    <li>Minimize request size by minifying javascript</li>
-    <li>Data URI's for more request minification</li>
-    <li>Automatic CSS and javascript versioning</li>
-    <li><strong>No hassle</strong>, just develop the same way you always do. We'll do the rest.</li>
+    <li>@Html.ActionLink("Output Caching", "OutputCaching")</li>
 </ul>
-
-<h3>Does it work?</h3>
-<p>
-    Moth was built out of the work we've done on the mobile website of the Dutch leading real estate site
-    <a href="http://www.funda.nl">funda</a>. The mobile site serves 200.000 pageviews per day with ease,
-    and with a minimum of requests and with blazing speed. 
-    You can <a href="http://m.funda.nl">check for yourself</a> how fast it is.
-</p>
