--- a/Mvc3.Demo/Views/Home/Index.cshtml
+++ b/Mvc3.Demo/Views/Home/Index.cshtml
@@ -4,7 +4,11 @@
 }
 
 <h2>Demo's!</h2>
-<p>Here are some demo's that are usefull in combination with the docs on the wiki page.</p>
+<p>Here are some demo's that are useful in combination with the docs on the wiki page.</p>
 <ul>
-    <li>@Html.ActionLink("Output Caching", "OutputCaching")</li>
+    <li>@Html.ActionLink("Server side caching", "OutputCaching")</li>
+    <li>@Html.ActionLink("Handling CSS", "CSS")</li>
+    <li>@Html.ActionLink("Handling javascript", "Javascript")</li>
+    <li>@Html.ActionLink("Data URIs", "DataUri")</li>
+    <li>@Html.ActionLink("Inline javascript processing", "InlineScript")</li>
 </ul>
