CSS Tidy fallback + NuGet package

--- a/Mvc3.Demo/Views/Home/DataUri.cshtml
+++ b/Mvc3.Demo/Views/Home/DataUri.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>DataUri example <a class="wiki" href="https://github.com/janjongboom/Moth/wiki/Data-Uri">documentation</a></h2>
+<h2>DataUri example <a class="wiki" href="https://github.com/janjongboom/Moth/wiki/Data-Uri's">documentation</a></h2>
 <p>
     Moth supports inline-images, also called Data URIs. They can be served from your project, or external.
 </p>
@@ -15,7 +15,7 @@
 </p>
 
 <h3>External path:</h3>
-<pre>@@Html.DataUriImage("http://www.ozanimals.com/image/albums/australia/Insect/Bee-hawk-moth.jpg")</pre>
+<pre>@@Html.DataUriImage("http://t1.gstatic.com/images?q=tbn:ANd9GcSID0NUhDsTWXqGjpg07A4f_VSp7SOFN7g4pdN4lzQo-HyEsI4A")</pre>
 <p>
-    @Html.DataUriImage("http://www.ozanimals.com/image/albums/australia/Insect/Bee-hawk-moth.jpg")
+    @Html.DataUriImage("http://t1.gstatic.com/images?q=tbn:ANd9GcSID0NUhDsTWXqGjpg07A4f_VSp7SOFN7g4pdN4lzQo-HyEsI4A")
 </p>
